Game over mechanics, trick inheritance

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Chance.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Dice.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,8 +27,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/MainScene.tscn", "res://Scenes/Game.tscn", "res://Scenes/Dice.tscn", "res://Scenes/ThreeOfAKind.tscn", "res://Scenes/FourOfAKind.tscn", "res://Scenes/Chance.tscn")
-current_scene="res://Scenes/FourOfAKind.tscn"
+open_scenes=PackedStringArray("res://Scenes/MainScene.tscn", "res://Scenes/Game.tscn", "res://Scenes/Trick.tscn")
+current_scene="res://Scenes/Game.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Chance.gd", "res://Scripts/Dice.gd", "res://Scripts/FourOfAKind.gd", "res://Scripts/Game.gd", "res://Scripts/PatternTrick.gd", "res://Scripts/ThreeOfAKind.gd", "res://Scripts/Yahtzee.gd"]
-selected_script="res://Scripts/PatternTrick.gd"
+open_scripts=["res://Scripts/Dice.gd", "res://Scripts/FourOfAKind.gd", "res://Scripts/Game.gd", "res://Scripts/Trick.gd"]
+selected_script="res://Scripts/Game.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
