--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -23,7 +23,7 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Scripts/FullHouse.gd"
 }, {
-"base": &"HBoxContainer",
+"base": &"Trick",
 "class": &"PatternTrick",
 "icon": "",
 "language": &"GDScript",
