--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,18 @@ export_presets.cfg
 # Mono-specific ignores
 .mono/
 data_*/
+
+# Godot 4.0 WebApp export generated files
+WebAppExport.zip
+WebAppExport/index.apple-touch-icon.png
+WebAppExport/index.apple-touch-icon.png.import
+WebAppExport/index.audio.worklet.js
+WebAppExport/index.html
+WebAppExport/index.icon.png
+WebAppExport/index.icon.png.import
+WebAppExport/index.js
+WebAppExport/index.pck
+WebAppExport/index.png
+WebAppExport/index.png.import
+WebAppExport/index.wasm
+WebAppExport/index.worker.js
